# src/common/swagger/request.dto.ts
@@ -33,3 +33,48 @@ export interface CreateReviewRequest {
   /** 리뷰 내용 */
   content: string;
 }
+
+/**
+ * 회원가입 요청
+ */
+export interface SignUpRequest {
+  /** 회원 이메일 */
+  email: string;
+
+  /** 회원 비밀번호 */
+  password: string;
+
+  /** 회원 이름 */
+  name: string;
+
+  /** 회원 전화번호 */
+  phone?: string;
+
+  /** 회원 생일 */
+  birthday?: string;
+}
+
+/**
+ * 로그인 요청
+ */
+export interface LoginRequest {
+  /** 회원 이메일 */
+  email: string;
+
+  /** 회원 비밀번호 */
+  password: string;
+}
+
+/**
+ * 내 정보 수정 요청
+ */
+export interface UpdateMyInfoRequest {
+  /** 회원 이름 */
+  name?: string;
+
+  /** 회원 전화번호 */
+  phone?: string;
+
+  /** 회원 생일 */
+  birthday?: string;
+}
