# src/modules/missions/missions.routes.js
@@ -1,27 +1,28 @@
 const express = require('express');
 const asyncHandler = require('../../common/middlewares/async-handler.middleware');
+const { isLogin } = require('../../common/middlewares/auth.middleware');
 const { sendControllerResult } = require('../../common/utils/controller-response.util');
 const MissionsController = require('./missions.controller');
 
 const router = express.Router();
 
-router.post('/missions/:missionId/challenges', asyncHandler(async (req, res) => {
+router.post('/missions/:missionId/challenges', isLogin, asyncHandler(async (req, res) => {
   const controller = new MissionsController();
-  const result = await controller.challengeMission(req.params.missionId);
+  const result = await controller.challengeMission(req, req.params.missionId);
 
   return sendControllerResult(res, controller, result);
 }));
 
-router.get('/members/me/missions', asyncHandler(async (req, res) => {
+router.get('/members/me/missions', isLogin, asyncHandler(async (req, res) => {
   const controller = new MissionsController();
-  const result = await controller.getMyInProgressMissions(req.query);
+  const result = await controller.getMyInProgressMissions(req, req.query);
 
   return sendControllerResult(res, controller, result);
 }));
 
-router.patch('/missions/:missionId/challenges/complete', asyncHandler(async (req, res) => {
+router.patch('/missions/:missionId/challenges/complete', isLogin, asyncHandler(async (req, res) => {
   const controller = new MissionsController();
-  const result = await controller.completeChallenge(req.params.missionId);
+  const result = await controller.completeChallenge(req, req.params.missionId);
 
   return sendControllerResult(res, controller, result);
 }));
